Refactor reconsideration claim details and add in unit tests

--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -34,10 +34,7 @@
   claimRejectedWithDQsForClaimantClaimDetails
   %}
 
-{% from "./claimStatus/orders.njk" import
-  directionsOrderIssued,
-  reviewRequester,
-  reviewReceiver %}
+{% from "./claimStatus/orders.njk" import directionsOrderIssued %}
 
 {% from "./claimStatus/claimPartAdmittedDefendant.njk" import
   claimPartAdmittedToOweForDefendantClaimDetails,
@@ -117,7 +114,7 @@
   statesPaidClaimSettledClaimantDetails,
   statesPaidClaimSettledDefendantsDetails %}
 
-{% macro caseHistoryForClaimantClaimDetails(claim, csrf, mediationDeadline) %}
+{% macro caseHistoryForClaimantClaimDetails(claim, csrf, mediationDeadline, reconsiderationDeadline, isReviewOrderEligible) %}
   {% for state in claim.stateHistory %}
     {% if state.status === ClaimStatus.PAID_IN_FULL_LINK_ELIGIBLE %}
       {{ paidInFullClaimantClaimDetails(claim.externalId) }}
@@ -174,7 +171,7 @@
       {% endif %}
     {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_DEFENCE %}
       {% if claim.directionOrder !== undefined %}
-        {{ directionsOrderIssued(claim, MadeBy.CLAIMANT) }}
+        {{ directionsOrderIssued(claim, MadeBy.CLAIMANT.value, reconsiderationDeadline, isReviewOrderEligible) }}
       {% else %}
         {% if claim.claimantResponse.freeMediation === FreeMediationOption.NO %}
           {{ claimRejectedDefendantDefenceFreeMediationNOForClaimantDetails(claim) }}
@@ -204,7 +201,7 @@
       {{ requestCCJ(claim) }}
     {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_PART_ADMISSION %}
       {% if claim.directionOrder !== undefined %}
-        {{ directionsOrderIssued(claim, MadeBy.CLAIMANT) }}
+        {{ directionsOrderIssued(claim, MadeBy.CLAIMANT.value, reconsiderationDeadline, isReviewOrderEligible) }}
       {% else %}
         {{ partAdmitRejectedByClaimantClaimDetails(claim) }}
       {% endif %}
@@ -222,17 +219,11 @@
       {% endif %}
     {% elif state.status === ClaimStatus.DEFENDANT_REJECTS_WITH_DQS %}
       {{ claimRejectedWithDQsForClaimantClaimDetails(claim, mediationDeadline) }}
-    {% elif state.status === ClaimStatus.REVIEW_ORDER_ELIGIBLE %}
-      {% if claim.reviewOrder.requestedBy === MadeBy.CLAIMANT.value %}
-        {{ reviewRequester(claim) }}
-      {% else %}
-        {{ reviewReceiver(claim) }}
-      {% endif %}
     {% endif %}
   {% endfor %}
 {% endmacro %}
 
-{% macro caseHistoryForDefendantClaimDetails(claim) %}
+{% macro caseHistoryForDefendantClaimDetails(claim, reconsiderationDeadline, isReviewOrderEligible) %}
   {% for state in claim.stateHistory %}
     {% if state.status === ClaimStatus.NO_RESPONSE %}
       {{ noResponseForDefendantClaimDetails(claim) }}
@@ -269,7 +260,7 @@
       {{ settlementAgreementSignedByBothDefendantClaimDetails(claim) }}
     {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_DEFENCE %}
       {% if claim.directionOrder !== undefined %}
-        {{ directionsOrderIssued(claim, MadeBy.DEFENDANT) }}
+        {{ directionsOrderIssued(claim, MadeBy.DEFENDANT.value, reconsiderationDeadline, isReviewOrderEligible) }}
       {% else %}
         {% if claim.claimantResponse.freeMediation === FreeMediationOption.NO %}
           {{ claimRejectedDefendantDefenceFreeMediationNOForDefendantDetails(claim) }}
@@ -310,7 +301,7 @@
         {{ offerSettlementReachedForDefendant(claim) }}
       {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_PART_ADMISSION %}
         {% if claim.directionOrder !== undefined %}
-          {{ directionsOrderIssued(claim, MadeBy.DEFENDANT) }}
+          {{ directionsOrderIssued(claim, MadeBy.DEFENDANT.value, reconsiderationDeadline, isReviewOrderEligible) }}
         {% else %}
           {{ partAdmitRejectedByClaimantDefendantClaimDetails(claim) }}
         {% endif %}
@@ -335,12 +326,6 @@
           {{ claimRejectedDefendantDefenceFreeMediationYESForDefendantDetails(claim) }}
         {% else %}
           {{ claimRejectedFreeMediationNOWithoutDQsForDefendantClaimDetails(claim) }}
-        {% endif %}
-      {% elif state.status === ClaimStatus.REVIEW_ORDER_ELIGIBLE %}
-        {% if claim.reviewOrder.requestedBy === MadeBy.DEFENDANT.value %}
-          {{ reviewRequester(claim) }}
-        {% else %}
-          {{ reviewReceiver(claim) }}
         {% endif %}
       {% endif %}
   {% endfor %}
