--- a/src/main/features/dashboard/views/macro/caseStatus.njk
+++ b/src/main/features/dashboard/views/macro/caseStatus.njk
@@ -89,6 +89,9 @@
 
 {% from "./claimStatus/breachOfPaymentDefendant.njk" import CCJAfterBreakingSettlementAgreementClaimDetails %}
 
+{% from "./claimStatus/orders.njk" import
+  directionsOrderIssuedClaimantDashboard,
+  directionsOrderIssuedDefendantDashboard %}
 
 {% macro caseStatusForClaimant(status, claim) %}
   {% if status === ClaimStatus.PAID_IN_FULL or status === ClaimStatus.PAID_IN_FULL_CCJ_CANCELLED or status === ClaimStatus.PAID_IN_FULL_CCJ_SATISFIED
@@ -139,10 +142,14 @@
       {{ claimFullAdmissionForClaimantDashboard(claim) }}
     {% endif %}
   {% elif status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_DEFENCE %}
-    {% if claim.claimantResponse.freeMediation === FreeMediationOption.NO %}
-      {{ claimRejectedDefendantDefenceFreeMediationNOForClaimantDashboard(claim) }}
+    {% if claim.directionOrder !== undefined %}
+      {{ directionsOrderIssuedClaimantDashboard() }}
     {% else %}
-      {{ claimRejectedDefendantDefenceFreeMediationYESForClaimantDashboard(claim) }}
+      {% if claim.claimantResponse.freeMediation === FreeMediationOption.NO %}
+        {{ claimRejectedDefendantDefenceFreeMediationNOForClaimantDashboard(claim) }}
+      {% else %}
+        {{ claimRejectedDefendantDefenceFreeMediationYESForClaimantDashboard(claim) }}
+      {% endif %}
     {% endif %}
   {% elif status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_DEFENCE %}
     {{ claimantAcceptedDefendantDefenceClaimantDashboard() }}
@@ -225,10 +232,14 @@
       {{ claimFullAdmissionForDefendantDashboard(claim) }}
     {% endif %}
   {% elif status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_DEFENCE %}
-    {% if claim.claimantResponse.freeMediation === FreeMediationOption.NO %}
-      {{ claimRejectedDefendantDefenceFreeMediationNOForDefendantDashboard(claim) }}
+    {% if claim.directionOrder !== undefined %}
+      {{ directionsOrderIssuedDefendantDashboard() }}
     {% else %}
-      {{ claimRejectedDefendantDefenceFreeMediationYESForDefendantDashboard(claim) }}
+      {% if claim.claimantResponse.freeMediation === FreeMediationOption.NO %}
+        {{ claimRejectedDefendantDefenceFreeMediationNOForDefendantDashboard(claim) }}
+      {% else %}
+        {{ claimRejectedDefendantDefenceFreeMediationYESForDefendantDashboard(claim) }}
+      {% endif %}
     {% endif %}
   {% elif status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_DEFENCE %}
     {{ claimantAcceptedDefendantDefenceDefendantDashboard() }}
