--- a/src/main/views/macro/addressFragment.njk
+++ b/src/main/views/macro/addressFragment.njk
@@ -1,4 +1,4 @@
-{% macro address(address, label) %}
+{% macro addressFragment(address, label) %}
   <div class="form-group">
     {% if label %}
       <span class="block">{{ t(label) }}</span>
