--- a/src/main/features/dashboard/views/macro/claimStatus/statesPaidRejected.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/statesPaidRejected.njk
@@ -3,9 +3,13 @@
 {% from "./utilityMacros.njk" import downloadResponseLink, downloadTheirResponseLink %}
 
 {% macro statesPaidRejectedClaimantDashboard(claim) %}
-  {{ t('You’ve rejected the defendant’s admission.') }}
-  {% if claim.claimantResponse.freeMediation === FreeMediationOption.YES %}
-    {{ t('You’ve both agreed to try mediation.') }}
+  {% if claim.directionsQuestionnaireDeadline %}
+    {{ t('You’ve rejected the defendant’s admission.') }}
+    {% if claim.claimantResponse.freeMediation === FreeMediationOption.YES %}
+      {{ t('You’ve both agreed to try mediation.') }}
+    {% endif %}
+  {% else %}
+    {{ t('Wait for the court to review the case') }}
   {% endif %}
 {% endmacro %}
 
