--- a/src/main/features/dashboard/views/macro/claimStatus/partAdmitRejectionClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/partAdmitRejectionClaimant.njk
@@ -2,23 +2,38 @@
 {% from "internalLink.njk" import internalLink %}
 
 {% macro partAdmitRejectedByClaimantDashboard() %}
-  {{ t('You’ve rejected the defendant’s admission.') }}
+  {% if featureToggles.mediation and claim.claimantResponse.freeMediation === FreeMediationOption.YES %}
+    {{ t('We’ll contact you with a mediation appointment') }}
+  {% else %}
+    {{ t('You’ve rejected the defendant’s admission.') }}
+  {% endif %}
 {% endmacro %}
 
 {% macro partAdmitRejectedByClaimantClaimDetails(claim) %}
-  <div class="status-block">
-    <h2 class="heading-small">{{ t('We’ll contact you with a mediation appointment') }}</h2>
+  {% if featureToggles.mediation and claim.claimantResponse.freeMediation === FreeMediationOption.YES %}
+    <div class="status-block">
+      <h2 class="heading-small">{{ t('We’ll contact you to try to arrange a mediation appointment') }}</h2>
 
-    <p>{{ t('You rejected the defendant’s admission of {{ amount }}', { amount: claim.response.amount | numeral }) }}</p>
-
-    {% if claim.claimantResponse.freeMediation === FreeMediationOption.YES %}
-      <p>{{ t('You’ve both agreed to try mediation. We’ll contact you to arrange a call with the mediator.') }}</p>
+      <p>{{ t('You’ve rejected the defendant’s response.')}}</p>
+      <p>{{ t('You’ve both agreed to try mediation. We’ll contact you to try to arrange a call with the mediator.') }}</p>
       <p>{{ internalLink('Find out how mediation works', DashboardPaths.howFreeMediationWorksPage.uri) }}</p>
-    {% else %}
-      <p>{{ t('You need to ' + internalLink('complete a directions questionnaire form ',
-          DashboardPaths.directionsQuestionnairePage.evaluateUri({ externalId: claim.externalId })) + 'to tell us more about the claim.') | safe }}</p>
-      <p>{{ t('Your claim won’t proceed if you don’t complete and return the form before {{ deadline }}.',
-          { deadline: claim.directionsQuestionnaireDeadline | date }) }}</p>
-    {% endif %}
-  </div>
+
+    </div>
+  {% else %}
+    <div class="status-block">
+      <h2 class="heading-small">{{ t('We’ll contact you with a mediation appointment') }}</h2>
+
+      <p>{{ t('You rejected the defendant’s admission of {{ amount }}', { amount: claim.response.amount | numeral }) }}</p>
+
+      {% if claim.claimantResponse.freeMediation === FreeMediationOption.YES %}
+        <p>{{ t('You’ve both agreed to try mediation. We’ll contact you to arrange a call with the mediator.') }}</p>
+        <p>{{ internalLink('Find out how mediation works', DashboardPaths.howFreeMediationWorksPage.uri) }}</p>
+      {% else %}
+        <p>{{ t('You need to ' + internalLink('complete a directions questionnaire form ',
+            DashboardPaths.directionsQuestionnairePage.evaluateUri({ externalId: claim.externalId })) + 'to tell us more about the claim.') | safe }}</p>
+        <p>{{ t('Your claim won’t proceed if you don’t complete and return the form before {{ deadline }}.',
+            { deadline: claim.directionsQuestionnaireDeadline | date }) }}</p>
+      {% endif %}
+    </div>
+  {% endif %}
 {% endmacro %}
