--- a/src/main/features/dashboard/views/macro/claimStatus/partAdmitRejectionDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/partAdmitRejectionDefendant.njk
@@ -3,27 +3,42 @@
 {% from "./utilityMacros.njk" import downloadResponseLink %}
 
 {% macro partAdmitRejectedByClaimantDefendantDashboard(claim) %}
-  {{ t('{{ claimantName }} rejected your admission of {{ amount }}', { amount: claim.response.amount | numeral, claimantName: claim.claimData.claimant.name }) }}
+  {% if featureToggles.mediation and claim.claimantResponse.freeMediation === FreeMediationOption.YES %}
+    {{ t('We’ll contact you with a mediation appointment') }}
+  {% else %}
+    {{ t('{{ claimantName }} rejected your admission of {{ amount }}', { amount: claim.response.amount | numeral, claimantName: claim.claimData.claimant.name }) }}
+  {% endif %}
 {% endmacro %}
 
 {% macro partAdmitRejectedByClaimantDefendantClaimDetails(claim) %}
-  <div class="status-block">
-    <h2 class="heading-small">{{ t('{{ claimantName }} has rejected your admission of {{ amount }}',
-        { amount: claim.response.amount | numeral, claimantName: claim.claimData.claimant.name }) }}</h2>
-    <p>{{ t('They believe you owe them the full {{ amount }} claimed.', { amount: claim.totalAmountTillToday | numeral }) }}</p>
+  {% if featureToggles.mediation and claim.claimantResponse.freeMediation === FreeMediationOption.YES %}
+    <div class="status-block">
+      <h2 class="heading-small">{{ t('We’ll contact you with a mediation appointment') }}</h2>
+      <p>{{ t('{{ claimantName }} has rejected your defence.',
+          { claimantName: claim.claimData.claimant.name }) }}</p>
+      <p>{{ t('You’ve both agreed to try mediation. We’ll contact you to arrange a call with the mediator.') }}</p>
+      <p>{{ internalLink('Find out how mediation works', DashboardPaths.howFreeMediationWorksPage.uri) }}</p>
+    </div>
+  {% else %}
 
-    {% if claim.claimantResponse.freeMediation === FreeMediationOption.YES %}
-      <p>{{ t('They have agreed to try mediation. We’ll contact you with details of your appointment.') }}</p>
-    {% else %}
-      <p>{{ t('You might have to go to a hearing. We’ll contact you if we set a hearing date to tell you how to prepare.') }}</p>
-      {% if claim.directionsQuestionnaireDeadline %}
-      <p>{{ t('You need to ' + internalLink('complete a directions questionnaire form ',
-          DashboardPaths.directionsQuestionnairePage.evaluateUri({ externalId: claim.externalId })) + 'to tell us more about the claim.') | safe }}</p>
-      <p>{{ t('Your defence won’t proceed if you don’t complete and return the form before {{ deadline }}.',
-          { deadline: claim.directionsQuestionnaireDeadline | date }) }}</p>
+    <div class="status-block">
+      <h2 class="heading-small">{{ t('{{ claimantName }} has rejected your admission of {{ amount }}',
+          { amount: claim.response.amount | numeral, claimantName: claim.claimData.claimant.name }) }}</h2>
+      <p>{{ t('They believe you owe them the full {{ amount }} claimed.', { amount: claim.totalAmountTillToday | numeral }) }}</p>
+
+      {% if claim.claimantResponse.freeMediation === FreeMediationOption.YES %}
+        <p>{{ t('They have agreed to try mediation. We’ll contact you with details of your appointment.') }}</p>
+      {% else %}
+        <p>{{ t('You might have to go to a hearing. We’ll contact you if we set a hearing date to tell you how to prepare.') }}</p>
+        {% if claim.directionsQuestionnaireDeadline %}
+        <p>{{ t('You need to ' + internalLink('complete a directions questionnaire form ',
+            DashboardPaths.directionsQuestionnairePage.evaluateUri({ externalId: claim.externalId })) + 'to tell us more about the claim.') | safe }}</p>
+        <p>{{ t('Your defence won’t proceed if you don’t complete and return the form before {{ deadline }}.',
+            { deadline: claim.directionsQuestionnaireDeadline | date }) }}</p>
+        {% endif %}
       {% endif %}
-    {% endif %}
 
-    <p>{{ downloadResponseLink(claim) }}</p>
-  </div>
+      <p>{{ downloadResponseLink(claim) }}</p>
+    </div>
+  {% endif %}
 {% endmacro %}
