--- a/src/main/features/response/views/confirmation/full-defence-steps.njk
+++ b/src/main/features/response/views/confirmation/full-defence-steps.njk
@@ -25,11 +25,16 @@
     <p>{{ t('If they reject your response the court will review the case. You might have to go to a hearing.') }}</p>
   {% endif %}
 {% elif claim.response.freeMediation === FreeMediationOption.YES %}
-  <p>{{ t('We’ll ask {{ claimantName }} if they want to try mediation. If they agree, we’ll contact you to arrange a call with the mediator. If not, we’ll tell you what to do.', { claimantName: claimantName }) | safe }}</p>
+  <p>{{ t('What happens next') }}</p>
+  <p>{{ t('We’ll ask {{ claimantName }} if they want to try mediation. If they agree, we’ll contact you with a date for an appointment. If not, we’ll tell you what to do.', { claimantName: claimantName }) | safe }}</p>
 {% else %}
-  <p>{{ t('We’ll contact you when {{ claimantName }} responds, to tell you what to do next.', { claimantName: claimantName }) | safe }}</p>
-  <p>{{ t('If {{ claimantName }} accepts your response the claim will be settled.', { claimantName: claimantName }) | safe }}</p>
-  <p>{{ t('If they reject your response the court will review the case. You might have to go to a hearing.') }}</p>
+  <p>{{ t('What happens next') }}</p>
+  <p>{{ t('You’ll have to go to a hearing.') }}</p>
+  <p>{{ t('You need to {{ completeDQsForm }} to tell us more about the claim.',
+      { completeDQsForm: internalLink(t('complete a directions questionnaire form'), ('https://www.gov.uk/government/publications/form-n180-directions-questionnaire-small-claims-track') }) | safe }}</p>
+  <p>{{ t('Your defence will be cancelled if you don’t complete and return the form by 4pm on {{ deadline }}'),
+        { deadline: claim.directionsQuestionnaireDeadline | date }}}</p>
+  <p>{{ t('We’ll contact you when we set a hearing date to tell you how to prepare.') }}</p>
 {% endif %}
 
 {% if claim.response.defenceType !== DefenceType.ALREADY_PAID %}
