--- a/src/main/features/response/views/confirmation/full-defence-steps.njk
+++ b/src/main/features/response/views/confirmation/full-defence-steps.njk
@@ -1,6 +1,8 @@
 {% from "internalLink.njk" import internalLink %}
 
 {% set claimantName = claim.claimData.claimant.name %}
+{% set directionsQuestionnaireUri = 'https://www.gov.uk/government/publications/form-n180-directions-questionnaire-small-claims-track' %}
+
 
 {% if claim.response.defenceType === DefenceType.ALREADY_PAID %}
   {% if claim.response.freeMediation === FreeMediationOption.YES %}
@@ -25,13 +27,13 @@
     <p>{{ t('If they reject your response the court will review the case. You might have to go to a hearing.') }}</p>
   {% endif %}
 {% elif claim.response.freeMediation === FreeMediationOption.YES %}
-  <p>{{ t('What happens next') }}</p>
   <p>{{ t('We’ll ask {{ claimantName }} if they want to try mediation. If they agree, we’ll contact you with a date for an appointment. If not, we’ll tell you what to do.', { claimantName: claimantName }) | safe }}</p>
 {% else %}
-  <p>{{ t('What happens next') }}</p>
   <p>{{ t('You’ll have to go to a hearing.') }}</p>
-  <p>{{ t('You need to {{ completeDQsForm }} to tell us more about the claim.',
-      { completeDQsForm: internalLink(t('complete a directions questionnaire form'), ('https://www.gov.uk/government/publications/form-n180-directions-questionnaire-small-claims-track') }) | safe }}</p>
+  <p>{{ t('You need to '
+      + externalLink('complete a directions questionnaire form', directionsQuestionnaireUri )
+      + ' to tell us more about the claim.') | safe }}
+  </p>
   <p>{{ t('Your defence will be cancelled if you don’t complete and return the form by 4pm on {{ deadline }}'),
         { deadline: claim.directionsQuestionnaireDeadline | date }}}</p>
   <p>{{ t('We’ll contact you when we set a hearing date to tell you how to prepare.') }}</p>
