Removed the word home from court select page
'Home' is not included in the relevant features to be built page (it says 'address' rather than 'home address') so I've taken it out

--- a/src/main/features/directions-questionnaire/views/hearing-location.njk
+++ b/src/main/features/directions-questionnaire/views/hearing-location.njk
@@ -26,9 +26,9 @@
               <p>{{ t('The nearest court to {{ courtPostcode }} is {{ courtName }}', { courtPostcode: courtPostcode, courtName: courtName }) }}</p>
             {% elseif party === MadeBy.DEFENDANT %}
               {{ commonContent() }}
-              <p>{{ t('You can choose any location - {{ courtName }} is the nearest to the home address you gave us.', { courtName: courtName }) }}</p>
+              <p>{{ t('You can choose any location - {{ courtName }} is the nearest to the address you gave us.', { courtName: courtName }) }}</p>
             {% elseif party === MadeBy.CLAIMANT %}
-              <p>{{ t('You can request any location - {{ courtName }} is the nearest to your home address you gave us.', { courtName: courtName }) }}
+              <p>{{ t('You can request any location - {{ courtName }} is the nearest to the address you gave us.', { courtName: courtName }) }}
             {% endif %}
 
             <details class="form-group analytics-click-event-trigger" data-event-label="Court-Facilities: Facilities of the chosen court.">
